# sentinel-agos

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  render.yaml  requirements.txt  supabase_schema.sql
agents/: __init__.py  base.py  sandbox.py  scout.py
agents/prompts/: scout_analysis.md
api/: dependencies.py  main.py
api/middleware/: auth.py  quota.py
api/routes/: __init__.py  analytics.py  architect.py  audits.py  auth.py  batches.py  leads.py  stripe.py  webhooks.py
config/: settings.py
docs/: IMPLEMENTATION_PLAN.md
mcp_servers/: __init__.py  e2b_mcp.py  playwright_mcp.py
migrations/: 001_infinite_sdr_schema.sql  002_autonomous_production_forge.sql  002_discovery_schema.sql
rooms/: __init__.py  base.py
rooms/architect/: __init__.py  agent.py  mcp_tool_loader.py  prompt_composer.py  room.py  workflow_executor.py
rooms/architect/prompts/: architect_system.md
rooms/architect/tools/: __init__.py  brand_extractor.py  deep_audit.py  mockup_generator.py  strategy_synthesizer.py  vision_auditor.py
rooms/discovery/: __init__.py  agent.py  room.py
rooms/discovery/prompts/: discovery_system.md
rooms/discovery/tools/: __init__.py  contract_generator.py  email_sender.py  memory_loader.py  pricing_calculator.py  proposal_generator.py  sms_sender.py  stripe_checkout.py  vlm_analyzer.py
rooms/triage/: __init__.py  agent.py  room.py
rooms/triage/prompts/: triage_system.md
rooms/triage/tools/: __init__.py  ad_pixel_sensor.py  condition_evaluator.py  contact_verification.py  fast_scan.py  lead_ingest.py  registry.py  shopify_scanner.py  signal_detector.py
schemas/: __init__.py  analysis.py  audit.py  leads.py
services/: __init__.py  anthropic.py  browser.py  e2b_sandbox.py  lighthouse.py  supabase.py
tests/: __init__.py  conftest.py  test_api.py  test_architect.py  test_integration.py  test_scout.py  test_triage.py
worker/: __init__.py  main.py
worker/tasks/: __init__.py  architect.py  audit.py  discovery.py  discovery_cron.py  triage.py
